# PokeTracker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.checkout-webhook  Dockerfile.pokecenter-notifier  README.md  checkout-profile.example.json  pyproject.toml  watchlist.yaml
.claude/commands/: check-infra.md  refresh-session.md
.github/workflows/: deploy.yml  validate.yml
docs/: ai-agent-handoff.md  target-checkout-ops.md
infra/bootstrap/: main.tf  variables.tf
infra/main/: github_oidc.tf  main.tf  outputs.tf  pokecenter.tf  terraform.tfvars.example  variables.tf
scripts/: start_target_debug_chrome.ps1  validate-checkout.ps1  validate-checkout.sh
src/poketracker/: main.py  models.py  preview_email.py  sync_watchlist.py  validate_watchlist.py
src/poketracker/checkout/: base.py  dry_run.py  http.py  local_target_buyer.py  profile.py  target_credentials.py  target_session.py  target_storage_state.py  verify_target_checkout.py
src/poketracker/checkout_webhook/: handler.py  handler_types.py  session_refresh.py  tab_warmup.py  target_driver.py
src/poketracker/config/: watchlist.py
src/poketracker/notify/: email.py
src/poketracker/pokecenter_notifier/: checker.py  handler.py
src/poketracker/rules/: engine.py
src/poketracker/signals/: base.py  bestbuy.py  page.py
src/poketracker/storage/: dynamodb.py
tests/: test_checkout.py  test_checkout_profile.py  test_checkout_webhook.py  test_email.py  test_local_target_buyer.py  test_main.py  test_page_signal.py  test_rules.py  test_target_credentials.py  test_target_driver.py  test_target_session.py  test_target_session_refresh.py  test_watchlist.py
