[project]
name = "poketracker"
version = "2.0.0"
description = "MSRP-focused Pokemon card restock monitoring with optional v2 purchase handoff."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "PyYAML>=6.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
]
checkout = [
    "playwright>=1.48.0",
]

[project.scripts]
poketracker = "poketracker.main:main"
poketracker-preview-email = "poketracker.preview_email:main"
poketracker-put-checkout-profile = "poketracker.checkout.profile:main"
poketracker-capture-target-session = "poketracker.checkout.target_session:main"
poketracker-local-target-buyer = "poketracker.checkout.local_target_buyer:main"
poketracker-verify-target-checkout = "poketracker.checkout.verify_target_checkout:main"
poketracker-validate-watchlist = "poketracker.validate_watchlist:main"
poketracker-sync-watchlist = "poketracker.sync_watchlist:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poketracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
